@@ -1,9 +1,9 @@
-package main.java.ui.pagefactory.service;
+package main.java.ui.pagefactory.service.classic;
 
 import main.java.ui.core.logger.Log;
-import main.java.ui.pagefactory.page.FiltersPage;
+import main.java.ui.pagefactory.page.classic.FiltersPage;
 import main.java.ui.pagefactory.pagebase.AbstractBaseService;
-import main.java.ui.pagefactory.page.AbstractPage;
+import main.java.ui.pagefactory.page.classic.AbstractPage;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 
@@ -23,12 +23,12 @@ public class FiltersServiceBase extends AbstractBaseService<FiltersPage> {
     }
 
     public boolean isFilterListContainsFilters(String... filterNames) {
-        Log.info(String.format("Check that %s are shown in the filter list", Arrays.toString(filterNames)));
+        Log.info("Check that %s are shown in the filter list".formatted(Arrays.toString(filterNames)));
         return getFiltersNamesList().containsAll(Arrays.asList(filterNames));
     }
 
     public boolean isFilterListContainsOnlyOneEntryWithName(String filterName) {
-        Log.info(String.format("Check that filter list contains only one element with name %s", filterName));
+        Log.info("Check that filter list contains only one element with name %s".formatted(filterName));
         return getFiltersNamesList().stream().filter(name -> name.equals(filterName)).count() == 1;
     }
 
@@ -38,14 +38,6 @@ public class FiltersServiceBase extends AbstractBaseService<FiltersPage> {
 
     public void clickDeleteFilter(String filterName) {
         getPage().getDeleteButtonByFilterName(filterName).click();
-    }
-
-    public void waitFiltersListIsShown() {
-        getPage().waitFor(ExpectedConditions.visibilityOf(getPage().getFilterRows().get(0)), Duration.ofSeconds(AbstractPage.DEFAULT_TIMEOUT));
-    }
-
-    public void waitAddFilterButtonClickable() {
-        getPage().waitFor(ExpectedConditions.elementToBeClickable(getPage().getAddFilterButton()), Duration.ofSeconds(AbstractPage.DEFAULT_TIMEOUT));
     }
 
     public void waitFilterIsNotShown(WebElement filter) {
